--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-xarray==2025.9.0
-geopandas==1.1.1
-shapely==2.1.2
-numpy==2.3.3
-pandas==2.3.2
-numpy==2.3.3
+xarray
+geopandas
+shapely
+numpy
+pandas
+numpy
 gsw==3.6.20
-matplotlib==3.10.6
-cmocean==4.0.3
-keplergl==0.3.2
+matplotlib
+cmocean
+keplergl
